--- a/FamousPlayers.html
+++ b/FamousPlayers.html
@@ -7,3 +7,35 @@ They are recognized as some of the best players in the world, and they earned th
 </p>
 <img title="magnus carlsen" width="250px" src="https://images.chesscomfiles.com/uploads/v1/master_player/3b0ddf4e-bd82-11e8-9421-af517c2ebfed.f2dc9e34.250x250o.5ede81456fe8.png">
 This is Magnus Carlsen, the highest ranking Chess grandmaster in the world right now
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<ol>
+				<li class="list-item">
+					Magnus Carlsen score 2840
+				</li>
+				<li class="list-item">
+					Hikaru Nakamura score 2810
+				</li>
+				<li class="list-item">
+					Fabiano Caruana score 2795
+				</li>
+				<li class="list-item">
+					Vincent Keymer score 2776
+				</li>
+				<li class="list-item">
+					Arjun Erigaisi score 2775
+				</li>
+				<li class="list-item">
+					Alireza Firouzja score 2762
+				</li>
+				<li class="list-item">
+					Praggnanandhaa Rameshbabu score 2761
+				</li>
+				<li class="list-item">
+					Anish Giri score 2760
+				</li>
+			</ol>
+		</div>
+	</div>
+</div>
