--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 Chess is one of the oldest and most popular games in the world. Created in the 6th century, it has become an international sport, the best players have become millionaires, and
 is played by people of all ages. Chess is a game that involves strategy and careful planning by the players. The game requires 2 players, and each player picks a color. Each
 player will take turns moving a piece of their choosing and take out their opponents pieces until one of the kings is in checkmate. This is a great place for beginners to learn
-about how the game works, some of the most famous players, and basic strategy's to help them become a better chess player
+about how the game works, some of the most famous players, and basic strategy's to help them become a better chess player.
 </p>
 <img title="chess" width="400px" src="https://chessbazaar.gumlet.io/media/catalog/product/cache/c249699911720c504823772501a8e5ee/r/i/ridle_series_chess_pieces_in_ebony_2_.jpg">
     </body>
