--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="navbar-nav">
 						<li class="nav-item active">
-							 <a class="nav-link" href="#">Link <span class="sr-only">(current)</span></a>
+							 <a class="nav-link" href="#">Famous Players <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item">
 							 <a class="nav-link" href="#">Link</a>
